<resources>
    <string name="app_name">Friends Of Framers</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">REGISTER</string>
    <string name="NAME">ENTER YOUR NAME</string>
    <string name="EMAIL">ENTER YOUR EMAIL ID</string>
    <string name="PHONE_NUMBER">ENTER YOUR PHONE NUMBER</string>
    <string name="PERMANENT_ADDRESS">ENTER YOUR PERMANENT ADDRESS</string>
    <string name="CURRENT_ADDRESS">ENTER YOUR CURRENT ADDRESS</string>
    <string name="FARMER_RADIO">FARMER</string>
    <string name="CONSUMER_RADIO">CONSUMER</string>
    <string name="PASSWORD">ENTER YOUR PASSWORD</string>
    <string name="CONFIRM_PASSWORD">CONFIRM YOUR PASSWORD</string>
    <string name="REGISTER_AS">REGISTER AS</string>
    <string name="REGISTRATION_COMPLETE">REGISTRATION COMPLETED</string>
    <string name="CLEAR">CLEAR ALL FIELDS</string>
    <string name="already">Already A User?</string>
    <string name="textview">TextView</string>
    <string name="button">Button</string>
    <string name="skip">Already A User? LOGIN</string>
    <string-array name="sortArray">
        <item>Stock Asc.</item>
        <item>Stock Des</item>
        <item>Pen. Ord. Asc.</item>
        <item> Pen. Ord. Des.</item>
    </string-array>
    <string name="OTPBUTTON">SEND OTP</string>
    <string name="otp">ENTER OTP</string>
    <string name="connecting_farmer_s_and_user_s">Connecting Farmers and Users</string>
    <string name="buy_now">BUY NOW</string>
    <string name="title_activity_test">test</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="textView">FOR SELECTED CROP</string>
    <string name="textView2">Enter Quantity (kg) :</string>
    <string name="editText">PROCEED TO CHECKOUT</string>
    <string name="radioButton">High</string>
    <string name="radioButton2">Moderate</string>
    <string name="radioButton3">Low</string>
    <string name="textView4">Profile</string>
    <string name="textView5">Profile</string>
    <string name="mycart">My Cart</string>
    <string name="myprofile6">My Profile</string>
    <string name="name">Rahul Kumar</string>
    <string name="my_cart">My Cart</string>
    <string name="deals">TextView</string>
    <string name="myorders">TextView</string>
    <string name="wheatprice">TextView</string>
    <string name="riceprice">TextView</string>
    <string name="wheatimage">wheatimage</string>
    <string name="onionimage">onionimage</string>
    <string name="brinjalimage">brinjalimage</string>
    <string name="carrotimage">carrotimage</string>
    <string name="cauliimage">cauliimage</string>
    <string name="cropname">TextView</string>
    <string name="pankajActivity">Pankaj Ativity !!</string>
    <string name="sugarcaneprice">Sugarcane (5/Pcs)</string>

    <string-array name="search_crops">

        <item>Paddy</item>
        <item>Wheat</item>
        <item>Maize</item>
        <item>Potato</item>
        <item>Dal</item>
        <item>Carrot</item>
        <item>Gram</item>
        <item>Onion</item>
        <item>Sugarcane</item>
        <item>Tomato</item>
        <item>Chilly</item>
        <item>Spinach</item>
        <item>Brinjal</item>
        <item>Peas</item>
        <item>Cauliflower</item>
        <item>Millet</item>
        <item>Pulse</item>
        <item>Mustard</item>


    </string-array>
</resources>
