<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registerActivity">

    <ScrollView
        android:id="@+id/scrollView2"

        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <LinearLayout
            android:id="@+id/mainContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:autofillHints=""
                android:background="@drawable/edittext_bg"
                android:drawableStart="@drawable/ic_person_black_24dp"
                android:ems="10"
                android:fontFamily="@font/expletus_sans_medium_italic"
                android:gravity="center"
                android:hint="@string/NAME"
                android:inputType="textPersonName"
                android:textColorLink="@color/colorPrimary"
                app:layout_constraintBottom_toTopOf="@+id/scrollView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:targetApi="o" />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:autofillHints=""
                android:background="@drawable/edittext_bg"
                android:drawableStart="@drawable/ic_email_black_24dp"
                android:ems="10"
                android:fontFamily="@font/expletus_sans_medium_italic"
                android:gravity="center"
                android:hint="@string/EMAIL"
                android:inputType="textPersonName"
                android:textColorLink="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText2"
                tools:targetApi="o" />

            <EditText
                android:id="@+id/editText4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:autofillHints=""
                android:background="@drawable/edittext_bg"
                android:drawableStart="@drawable/ic_phone_black_24dp"
                android:ems="10"
                android:fontFamily="@font/expletus_sans_medium_italic"
                android:gravity="center"
                android:hint="@string/PHONE_NUMBER"
                android:inputType="phone"
                android:textColorLink="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText3"
                tools:targetApi="o" />

            <EditText
                android:id="@+id/editText5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:autofillHints=""
                android:background="@drawable/edittext_bg"
                android:drawableStart="@drawable/ic_location_on_black_24dp"
                android:ems="10"
                android:fontFamily="@font/expletus_sans_medium_italic"
                android:gravity="center"
                android:hint="@string/PERMANENT_ADDRESS"
                android:inputType="textPostalAddress"
                android:textColorLink="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText4"
                tools:targetApi="o" />

            <EditText
                android:id="@+id/editText6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:autofillHints=""
                android:background="@drawable/edittext_bg"
                android:drawableStart="@drawable/ic_location_on_black_24dp"
                android:ems="10"
                android:fontFamily="@font/expletus_sans_medium_italic"
                android:gravity="center"
                android:hint="@string/CURRENT_ADDRESS"
                android:inputType="textPostalAddress"
                android:textColorLink="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText5"
                tools:targetApi="o" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/expletus_sans_medium_italic"
                android:gravity="center"
                android:text="@string/REGISTER_AS"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

            <RadioGroup
                android:id="@+id/rbgroup"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText6">

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/expletus_sans_medium_italic"
                    android:text="@string/FARMER_RADIO"
                    android:textColorLink="@color/colorPrimary" />

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/expletus_sans_medium_italic"
                    android:text="@string/CONSUMER_RADIO"
                    android:textColorLink="@color/colorPrimary" />
            </RadioGroup>

            <EditText
                android:id="@+id/editText8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/edittext_bg"
                android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                android:ems="10"
                android:fontFamily="@font/expletus_sans_medium_italic"
                android:gravity="center"
                android:hint="@string/PASSWORD"
                android:importantForAutofill="no"
                android:inputType="numberPassword"
                android:textColorLink="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rbgroup"
                tools:targetApi="o" />

            <EditText
                android:id="@+id/editText9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/edittext_bg"
                android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                android:ems="10"
                android:fontFamily="@font/expletus_sans_medium_italic"
                android:gravity="center"
                android:hint="@string/CONFIRM_PASSWORD"
                android:importantForAutofill="no"
                android:inputType="numberPassword"
                android:textColorLink="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText8"
                tools:targetApi="o" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:background="#00ffffff"
                android:fontFamily="@font/expletus_sans_medium_italic"
                android:text="@string/skip"
                app:layout_constraintEnd_toStartOf="@+id/scrollView2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/skip" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="64dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="64dp"
                android:background="@drawable/button_bg"
                android:fontFamily="@font/expletus_sans_medium_italic"
                android:text="@string/CLEAR"
                android:textColorLink="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/button_bg"
                android:fontFamily="@font/expletus_sans_medium_italic"
                android:text="@string/button_send"
                android:textColorLink="@color/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>